mainnet/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geth-mainnet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: geth-mainnet
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  rules:
  - host: "mainnet.tellor.io"
    http:
      paths:
        - backend:
            serviceName: geth-mainnet
            servicePort: 8545
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geth-ws-mainnet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: geth-mainnet
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  rules:
  - host: "mainnet-ws.tellor.io"
    http:
      paths:
        - backend:
            serviceName: geth-mainnet
            servicePort: 8546
